--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <style>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    </style>
 <h1>znon's stuff</h1>
 <p>only the coolest stuff will be here.</p>
 </body>
