--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<meta charset="UTF-8">
+<title>Page Title</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+</style>
+<script src=""></script>
 <body>
-    <style>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    </style>
-<h1>znon's stuff</h1>
-<p>only the coolest stuff will be here.</p>
+
+<img src="img_la.jpg" alt="LA" style="width:100%">
+
+<div class="w3-container w3-black">
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+<p>This is another paragraph.</p>
+</div>
+
 </body>
 </html>
