--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <script src=""></script>
 <body>
 
-<img src="img_la.jpg" alt="LA" style="width:100%">
 
 <div class="w3-container w3-black">
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-<p>This is another paragraph.</p>
+<h1>The ultimate website</h1>
+<p>Chads only.</p>
+<p>adil gay.</p>
 </div>
 
 </body>
