--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<title>znon's website of fun times</title>
+<meta content="znon's website" property="og:title" />
+<meta content="Links to my songs, blogs, and stuff like that" property="og:description" />
+<meta content="https://htmlcsssjava.github.io" property="og:url" />
+<meta content="https://cdn.discordapp.com/attachments/818877736613314610/1005498476198641845/Untitled_3.png" property="og:image" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
+
+
+
 <html lang="en">
 <meta charset="UTF-8">
 <title>Page Title</title>
