--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<title>Thad Chunder</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
@@ -20,9 +20,9 @@
 
 
 <div class="w3-container w3-black">
-<h1>The ultimate website</h1>
-<p>Chads only.</p>
-<p>adil gay.</p>
+<h1>znon's website</h1>
+<p>Pretty epic.</p>
+<p>Working on it.</p>
 </div>
 
 </body>
