--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <div class="w3-container w3-black">
 <h1>znon's website</h1>
+<a href="https://htmlcsssjava.github.io/downloads.html">music downloads</a>
 <p>Pretty epic.</p>
 <p>Working on it.</p>
 </div>
