--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                 <div class="content_section">
                   <h1>About Us</h1>
                   <img src="images/tooplate_image_02.jpg" alt="Image 02" class="image_wrapper image_fl" />
-                  <p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in lectus turpis. Vivamus cursus tortor quis leo ullamcorper auctor quis tincidunt metus.</em></p>
-                  <p>Vestibulum vitae lectus a leo commodo egestas. Sed et ligula mauris. Donec interdum iaculis eros, sed porttitor justo ornare ac. Suspendisse ultrices arcu auctor <a href="#">sapien malesuada</a> dictum. Vivamus non ante sit amet ligula dignissim blandit ut sit amet purus. Sed tristique euismod lectus sed scelerisque. Curabitur convallis fringilla ante, eget eleifend magna iaculis eget. Praesent at nunc tellus. Sed sed auctor odio. Maecenas ut <a href="#">mauris eu ligula</a> placerat tempor vel ac augue. Integer fermentum, ante eget sodales lacinia, nisl diam semper elit, non hendrerit nunc urna vitae erat. Fusce ac ante vulputate nunc cursus ullamcorper. Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow"><strong> XHTML</strong></a> and <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow"><strong>CSS</strong></a>.</p>
+                  <p><em>hi there and welcome to sussy mogus incorparated.</em></p>
+                  <p>Vestibulum vitae lectus a leo commodo egestas. Sed et ligula mauris. Donec interdum iaculis eros, sed porttitor justo ornare ac. Suspendisse ultrices arcu auctor <a href="#">sapien malesuada</a> dictum. Vivamus non ante sit amet ligula dignissim blandit ut sit amet purus. Sed tristique euismod lectus sed scelerisque. Curabitur convallis fringilla ante, eget eleifend magna iaculis eget. Praesent at nunc tellus. Sed sed auctor odio. Maecenas ut <a href="#">mauris eu ligula</a> placerat tempor</a>.</p>
                 </div>
 				
                 <div class="content_section last_section">
