--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <h1>About Us</h1>
                   <img src="images/tooplate_image_02.jpg" alt="Image 02" class="image_wrapper image_fl" />
                   <p><em>hi there and welcome to sussy mogus incorparated.</em></p>
-                  <p>Vestibulum vitae lectus a leo commodo egestas. Sed et ligula mauris. Donec interdum iaculis eros, sed porttitor justo ornare ac. Suspendisse ultrices arcu auctor <a href="#">sapien malesuada</a> dictum. Vivamus non ante sit amet ligula dignissim blandit ut sit amet purus. Sed tristique euismod lectus sed scelerisque. Curabitur convallis fringilla ante, eget eleifend magna iaculis eget. Praesent at nunc tellus. Sed sed auctor odio. Maecenas ut <a href="#">mauris eu ligula</a> placerat tempor</a>.</p>
+                  <p>your a silly cockhead </a>.</p>
                 </div>
 				
                 <div class="content_section last_section">
