--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <h1>About Us</h1>
                   <img src="images/tooplate_image_02.jpg" alt="Image 02" class="image_wrapper image_fl" />
                   <p><em>hi there and welcome to sussy mogus incorparated.</em></p>
-                  <p>your a silly cockhead </a>.</p>
+                  <p>your a silly cockhead and i focken hate you suck my ballsack you slimy wee fuckface. im just doing your maw doin doin your maw ya fucker</a>.</p>
                 </div>
 				
                 <div class="content_section last_section">
