--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li><a href="#" class="service_two">play games on steam</a></li>
                     <li><a href="#" class="service_three">write blogs</a></li>
                     <li><a href="#" class="service_four">make music</a></li>
-                    <li><a href="#" class="service_five">fiddle with your mum ya stinky fuck</a></li>
+                    <li><a href="#" class="service_five">placeholder</a></li>
                   </ul>
                 </div>
               </div> <!-- end of home -->
@@ -62,8 +62,8 @@
                 <div class="content_section">
                   <h1>About Us</h1>
                   <img src="images/tooplate_image_02.jpg" alt="Image 02" class="image_wrapper image_fl" />
-                  <p><em>hi there and welcome to sussy mogus incorparated.</em></p>
-                  <p>your a silly cockhead and i focken hate you suck my ballsack you slimy wee fuckface. im just doing your maw doin doin your maw ya fucker</a>.</p>
+                  <p><em>placeholderblue</em></p>
+                  <p>placeholder</a>.</p>
                 </div>
 				
                 <div class="content_section last_section">
