--- a/music.html
+++ b/music.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
-<p>music downloadsr<p>
+<p>music downloads<p>
 <a href="https://github.com/htmlcsssjava/htmlcsssjava.github.io/releases/download/music/AsbestosAndWarCrimes.flac">Asbestos and War Crimes</a>
