--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div id="gallery_container">
                   <div class="gallery_box float_l">
                     <h4>Project One</h4>
-                    <a href="https://htmlcsssjava.github.io/music.html"><img src="images/gallery/image_01.jpg" alt="Project 1" /></a> </div>
+                    <a href="https://htmlcsssjava.github.io/music.html"><img src="https://cdn.openai.com/research-covers/jukebox/2x-no-mark.jpg" alt="Project 1" /></a> </div>
                   <div class="gallery_box float_r">
                     <h4>Project Two</h4>
                     <a href="#"><img src="images/gallery/image_02.jpg" alt="Project 2" /></a> </div>
