--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <a href="https://htmlcsssjava.github.io/nope.html"><img src="images/myspace.png" alt="myspace" /></a>
         <a href="https://htmlcsssjava.github.io/nope.html"><img src="images/twitter.png" alt="twitter" /></a>
         <a href="https://www.youtube.com/channel/UC8Q9O2-SHQC_aYx9nb6MsqA"><img src="images/youtube.png" alt="youtube" /></a>
-        <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=137204&s=1'>
+        <div align='center'><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=137204&s=1'>
     </div>
     <div class="cleaner"></div>
 </div>
