--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <div class="panel" id="home">
                 <div class="content_section">
                   <h2>znon official website</h2>
-                  <img src="https://raw.githubusercontent.com/htmlcsssjava/htmlcsssjava.github.io/main/Untitled.tiff" alt="your browser is broken" width="200" height="150" class="image_wrapper image_fl" />
+                  <img src="https://github.com/htmlcsssjava/htmlcsssjava.github.io/blob/main/images/Untitled%20(4).png?raw=true" alt="your browser is broken" width="200" height="150" class="image_wrapper image_fl" />
                   <p><em>Here you'll find loads of great songs, interesting blogs, a cool website and other cool things here. Have fun!</em></p>
                   <p>See, this website would be more useful if i actually released a song, hasn't happened yet though. You can  <a rel="nofollow" href="https://soundcloud.com/aandwc">subscribe to my soundcloud</a>. You should also <a rel="nofollow" href="https://www.youtube.com/channel/UC8Q9O2-SHQC_aYx9nb6MsqA">subsribe to Foshwave on youtube</a>, You should also do the same to <a rel="nofollow" href="https://www.youtube.com/channel/UCwq3TRBI6hc5Eafc04jBf5A">My youtube channel</a>, no music there but i make some ytp's and they might encite a laugh or two.</p>
                 </div>
