--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                   <h2>znon official website</h2>
                   <img src="https://github.com/htmlcsssjava/htmlcsssjava.github.io/blob/main/images/Untitled%20(4).png?raw=true" alt="your browser is broken" width="200" height="150" class="image_wrapper image_fl" />
                   <p><em>Here you'll find loads of great songs, interesting blogs, a cool website and other cool things here. Have fun!</em></p>
-                  <p>See, this website would be more useful if i actually released a song, hasn't happened yet though. You can  <a rel="nofollow" href="https://soundcloud.com/aandwc">subscribe to my soundcloud</a>. You should also <a rel="nofollow" href="https://www.youtube.com/channel/UC8Q9O2-SHQC_aYx9nb6MsqA">subsribe to Foshwave on youtube</a>, You should also do the same to <a rel="nofollow" href="https://www.youtube.com/channel/UCwq3TRBI6hc5Eafc04jBf5A">My youtube channel</a>, no music there but i make some ytp's and they might encite a laugh or two.</p>
+                  <p>See, this website would be more useful if znon actually released a song, hasn't happened yet though. You can  <a rel="nofollow" href="https://soundcloud.com/aandwc">subscribe to znon's soundcloud</a>. You should also <a rel="nofollow" href="https://www.youtube.com/channel/UC8Q9O2-SHQC_aYx9nb6MsqA">subsribe to Foshwave on youtube</a>, You should also do the same to <a rel="nofollow" href="https://www.youtube.com/channel/UCwq3TRBI6hc5Eafc04jBf5A">znon's youtube channel</a>, no music there but znon make some ytp's and they might encite a laugh or two.</p>
                 </div>
                 <div class="content_section last_section">
-                  <h2>What i do</h2>
+                  <h2>What znon does</h2>
                   <ul class="service_list">
                     <li><a href="#" class="service_two">play games on steam</a></li>
                     <li><a href="#" class="service_three">write blogs</a></li>
@@ -62,15 +62,19 @@
                 <div class="content_section">
                   <h1>About Us</h1>
                   <img src="images/tooplate_image_02.jpg" alt="Image 02" class="image_wrapper image_fl" />
-                  <p><em>placeholderblue</em></p>
-                  <p>placeholder</a>.</p>
+                  <p><em>This tab will have info about znon</em></p>
+                  <p>znon is a soon to-be producer. He will post music on Foshwave when he gets round to producing one and releasing it. he's a bit busy right now but
+                    he will do it eventually
+                  </a>.</p>
                 </div>
 				
                 <div class="content_section last_section">
-                  <h2>Testimonial</h2>
+                  <h2>Blogs</h2>
                   <blockquote>
-                    <p>Fusce nec felis id lacus sollicitudin vulputate. Proin tincidunt, arcu id pellentesque accumsan, neque dolor imperdiet ligula, quis viverra tellus nulla a odio. Curabitur vitae enim risus, at placerat turpis. Mauris feugiat suscipit tempus fringilla, felis in velit. Aliquam a leo nec massa pharetra pulvinar.</p>
-                    <cite>Thomas - <span>Designer</span></cite> </blockquote>
+                    <p>One day znon will do blogs, as stated before he's a bit busy and life's a bit boring for him right now. i hope someone cares about
+                      them when i do make blogs eventually...
+                    </p>
+                    <cite>znon - <span>to-be programmer and producer</span></cite> </blockquote>
                 </div>
               </div> <!-- end of aboutus -->
 			  
