--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			  
               <div class="panel" id="contactus">
                 <h1>Contact Information</h1>
-                <p>Duis vel est eu velit eleifend volutpat non et purus. Pellentesque tellus nulla, suscipit et fringilla vitae, sodales ultricies dolor.</p>
+                <p>I seriously don't recommend using this, this index was a template i found online so it might not work</p>
                 <div class="cleaner_h10"></div>
 				
                 <div class="col_380 float_l">
