--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			  
               <div class="panel" id="aboutus">
                 <div class="content_section">
-                  <h1>About Us</h1>
+                  <h1>About znon</h1>
                   <img src="images/tooplate_image_02.jpg" alt="Image 02" class="image_wrapper image_fl" />
                   <p><em>This tab will have info about znon</em></p>
                   <p>znon is a soon to-be producer. He will post music on Foshwave when he gets round to producing one and releasing it. he's a bit busy right now but
@@ -79,9 +79,9 @@
               </div> <!-- end of aboutus -->
 			  
               <div class="panel" id="services">
-                <h1>Service Overview</h1>
+                <h1>znon gaming</h1>
                 <p><em>This tab is about znon's gaming stuff i guess</em></p>
-                <img src="images/tooplate_image_02.jpg" alt="Image" class="image_wrapper image_fr" />
+                <img src="https://play-lh.googleusercontent.com/52_DMY5417awaEgJf3_9mWgEuO2t1JfkGab8kM-LD6l5u6cGm_1-GsoQ_IyWFHdbkA" alt="Image" width="200" height="200" class="image_wrapper image_fr" />
                 <p>znon plays video games, some of his favourites currently are:
                 </p>
 <p>Airmech Strike</p>
