--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <img src="images/tooplate_image_02.jpg" alt="Image 02" class="image_wrapper image_fl" />
                   <p><em>This tab will have info about znon</em></p>
                   <p>znon is a soon to-be producer. He will post music on Foshwave when he gets round to producing one and releasing it. he's a bit busy right now but
-                    he will do it eventually
+                    he will do it eventually. I pretty much only export to .flac, but .ogg versions can also be found.
                   </a>.</p>
                 </div>
 				
