--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <h4>Songs</h4>
                     <a href="https://htmlcsssjava.github.io/music.html"><img src="https://cdn.openai.com/research-covers/jukebox/2x-no-mark.jpg" alt="Project 1" /></a> </div>
                   <div class="gallery_box float_r">
-                    <h4>completely unrelated midi files not made by znon</h4>
+                    <h4>completely unrelated midi</h4>
                     <a href="#"><img src="images/gallery/image_02.jpg" alt="Project 2" /></a> </div>
                   <div class="gallery_box float_l">
                     <h4>placeholder</h4>
