--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <a href="https://htmlcsssjava.github.io/music.html"><img src="https://cdn.openai.com/research-covers/jukebox/2x-no-mark.jpg" alt="Project 1" /></a> </div>
                   <div class="gallery_box float_r">
                     <h4>completely unrelated midi</h4>
-                    <a href="#"><img src="images/gallery/image_02.jpg" alt="Project 2" /></a> </div>
+                    <a href="#"><img src="https://content.instructables.com/ORIG/FX1/XP14/H4I7VOGP/FX1XP14H4I7VOGP.jpg?auto=webp&frame=1&fit=bounds&md=6c5f16c23589cc62cdb303a531da5cc9" alt="Project 2" /></a> </div>
                   <div class="gallery_box float_l">
                     <h4>placeholder</h4>
                     <a href="#"><img src="images/gallery/image_03.jpg" alt="Project 3" /></a> </div>
