--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 <p>Gmod</p>
 <p>Supremacy 1914</p>
 <p>Stardew Valley (sometimes)</p>
-<p>And osu!</p>				
+<p>osu!</p>		
+		      <p>And Team Fortress 2!<p>
                 <div class="cleaner_h20"></div>
 				
                 <ul class="service_list">
