--- a/school website/index2.html
+++ b/school website/index2.html
@@ -11,7 +11,7 @@
 <nav>
 <a href="https://htmlcsssjava.github.io">my real website |</a>
 <a href="https://www.image-line.com/"> image line website |</a>
-<a href="https://htmlcsssjava.github.io/school%20website/index2">VST review |</a>
+<a href="https://htmlcsssjava.github.io/school%20website/VST">VST review |</a>
 </nav>
 <main>
 	<section id = "Section1">
