--- a/school website/VST.html
+++ b/school website/VST.html
@@ -13,4 +13,7 @@
 <nav>
 <a href="https://htmlcsssjava.github.io">my real website |</a>
 <a href="https://www.image-line.com/"> image line website |</a>
+<a href="https://htmlcsssjava.github.io/school%20website/index2"> image line website |</a>
 </nav>
+  <main>
+    
