--- a/school website/VST.html
+++ b/school website/VST.html
@@ -15,5 +15,10 @@
 <a href="https://www.image-line.com/"> image line website |</a>
 <a href="https://htmlcsssjava.github.io/school%20website/index2"> main page |</a>
 </nav>
+<section id = "Section1">
   <main>
-    
+    <p>Which VST would you like to learn about?<p>
+    <a href="https://htmlcsssjava.github.io/school%20website/index2"> main page |</a>
+<a href=""> main page |</a>
+<a href=""> main page |</a>
+<a href=""> main page |</a>
