--- a/music.html
+++ b/music.html
@@ -1,3 +1,12 @@
 <!DOCTYPE html>
-<p>music downloads<p>
-<a href="https://github.com/htmlcsssjava/htmlcsssjava.github.io/releases/download/music/AsbestosAndWarCrimes.flac">Asbestos and War Crimes</a>
+<head>
+<title>music downloads</title>
+<h1>music downloads</h1>
+</head>
+<body>
+    <a href="https://github.com/htmlcsssjava/htmlcsssjava.github.io/releases/download/music/AsbestosAndWarCrimes.flac">Asbestos and War Crimes</a>
+    <p>It's pronounced "Sharp Dancing", not "Hastag Dancing"</p>
+    <a href="https://github.com/htmlcsssjava/htmlcsssjava.github.io/releases/download/%23dancing!/ragtime.dance.music.flac">#Dancing!</a>
+
+
+</body>
