--- a/school website/VST.html
+++ b/school website/VST.html
@@ -19,6 +19,6 @@
   <main>
     <p>Which VST would you like to learn about?<p>
     <a href="https://htmlcsssjava.github.io/school%20website/index2"> main page |</a>
-<a href=""> main page |</a>
-<a href=""> main page |</a>
-<a href=""> main page |</a>
+<a href=""> Serum |</a>
+<a href=""> PoiZone |</a>
+<a href=""> Directwave |</a>
