--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <div class="panel" id="aboutus">
                 <div class="content_section">
                   <h1>About znon</h1>
-                  <img src="images/tooplate_image_02.jpg" alt="Image 02" class="image_wrapper image_fl" />
+                  <img src="https://static.wikia.nocookie.net/surrealmemes/images/c/c3/Commander_Jerma.jpg/revision/latest?cb=20210618105847" alt="Image 02" class="image_wrapper image_fl" />
                   <p><em>This tab will have info about znon</em></p>
                   <p>znon is a soon to-be producer. He will post music on Foshwave when he gets round to producing one and releasing it. he's a bit busy right now but
                     he will do it eventually. I pretty much only export to .flac, but .ogg versions can also be found.
