--- a/school website/serum.html
+++ b/school website/serum.html
@@ -18,3 +18,4 @@
 <p>The serum VST is a very useful and versitile VST. It can be used to make your own waveforms and add effects to them. It's kind of like a synth but inside of a DAW.
 		It has various presets which can be added to the song, but don't be intimidated by the knobs!<p>
 <img src="http://cdn.shopify.com/s/files/1/0993/3800/files/Beginner_Tutorial_Xfer_Records_Serum_Synth.png?v=1615914520" alt="Serum VST" width="500" height="450">
+		<p>a picture of serum vst!<p>
