--- a/school website/VST.html
+++ b/school website/VST.html
@@ -20,5 +20,5 @@
     <p>Which VST would you like to learn about?<p>
     <a href="https://htmlcsssjava.github.io/school%20website/index2"> main page |</a>
 <a href="https://htmlcsssjava.github.io/school%20website/serum"> Serum |</a>
-<a href=""> PoiZone |</a>
+<a href="https://htmlcsssjava.github.io/school%20website/poizone"> PoiZone |</a>
 <a href=""> Directwave |</a>
