--- a/school website/poizone.html
+++ b/school website/poizone.html
@@ -16,7 +16,8 @@
 </nav>
 <main>
 	<section id = "Section1">
-<p>Poizone. A stock FL Studio plugin that is often overlooked like most stock plugins. In my personal opinion
+<p>Poizone. A stock FL Studio plugin that is often overlooked like most stock plugins. It has many presets which indluces: Arpeggios, Bass, Keyboard, Synth and
+	Lead presets. It's a pretty old plugin compared to most but in my personal opinion
   it is pretty underrated. The UI may look pretty bad, but i say all producers should give it a shot!<p>
 <img src="https://www.image-line.com/fl-studio-learning/fl-studio-online-manual/html/img_plug/Poizone_Title.jpg" alt="Serum VST" width="500" height="400">
 		<p>Poizone VST!<p>
