--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li><a href="#aboutus" class="menu_02">About znon</a></li>
                     <li><a href="#services" class="menu_03">Gaming</a></li>
                     <li><a href="#gallery" class="menu_04">Web Pages</a></li>
-                    <li><a href="#contactus" class="menu_05">Contact</a></li>
+                    <li><a href="#contactus" class="menu_05">midi player</a></li>
                 </ul>
             </div>
 		</div> <!-- end of sidebar -->  
@@ -124,7 +124,7 @@
               </div>
 			  
               <div class="panel" id="contactus">
-                <h1>Contact Information</h1>
+                <h1>A built in midi player</h1>
                 <p>midi player</p>
                 <div class="cleaner_h10"></div>
 				
