--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				
 
 <midi-player
-  src="https://magenta.github.io/magenta-js/music/demos/melody.mid"
+  src="https://raw.githubusercontent.com/htmlcsssjava/htmlcsssjava.github.io/main/midi/Daddy_DJ_-_Daddy_DJ.mid"
   sound-font visualizer="#myVisualizer">
 </midi-player>
 <midi-visualizer type="piano-roll" id="myVisualizer"></midi-visualizer>
