updated information and made the information more clean

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <div class="content_section last_section">
                   <h2>What znon does</h2>
                   <ul class="service_list">
-                    <li><a href="#" class="service_two">play games on steam</a></li>
-                    <li><a href="#" class="service_three">write blogs</a></li>
-                    <li><a href="#" class="service_four">make music</a></li>
-                    <li><a href="#" class="service_five">do things with computers</a></li>
+                    <li><a href="#" class="service_two">Play games on steam</a></li>
+                    <li><a href="#" class="service_three">Write blogs</a></li>
+                    <li><a href="#" class="service_four">Make music</a></li>
+                    <li><a href="https://ukhousing.fandom.com/wiki/Main_Page" class="service_five">Admin of The UK Housing Wiki!!</a></li>
                   </ul>
                 </div>
               </div> <!-- end of home -->
@@ -62,7 +62,7 @@
               <div class="panel" id="aboutus">
                 <div class="content_section">
                   <h1>About znon</h1>
-                  <img src="https://static.wikia.nocookie.net/surrealmemes/images/c/c3/Commander_Jerma.jpg/revision/latest?cb=20210618105847" alt="Image 02" class="image_wrapper image_fl" />
+                  <img src="https://static.wikia.nocookie.net/surrealmemes/images/c/c3/Commander_Jerma.jpg/revision/latest?cb=20210618105847" alt="Probably for the best you don't see this" class="image_wrapper image_fl" />
                   <p><em>This tab will have info about znon</em></p>
                   <p>znon is a soon to-be producer. He will post music on Foshwave when he gets round to producing one and releasing it. he's a bit busy right now but
                     he will do it eventually. I pretty much only export to .flac, but .ogg versions can also be found.
@@ -75,7 +75,7 @@
                     <p>One day znon will do blogs, as stated before he's a bit busy and life's a bit boring for him right now. i hope someone cares about
                       them when i do make blogs eventually...
                     </p>
-                    <cite>znon - <span>to-be programmer and producer</span></cite> </blockquote>
+                    <cite>znon - <span>to-be programmer, wiki editor and music producer</span></cite> </blockquote>
                 </div>
               </div> <!-- end of aboutus -->
 			  
@@ -88,10 +88,11 @@
 <p>Airmech Strike</p>
 <p>Minecraft</p>
 <p>Gmod</p>
+<p>Overwatch 2</p>
 <p>Supremacy 1914</p>
 <p>Stardew Valley (sometimes)</p>
 <p>osu!</p>		
-		      <p>And Team Fortress 2!<p>
+<p>And Team Fortress 2!<p>
                 <div class="cleaner_h20"></div>
 				
                 <ul class="service_list">
